Fix Sign in/Sign up form (see details)
- buttons: add right arrow, set width of 200px
- fix multiple help-blocks overlapping each other
- pull 'Forgot password' link to the right
- center alert image vertically inside .alert
- place phone-related inputs on the same line on smaller screens
- add down arrow to selects
- make control-labels dark gray
- add margin-top to 'Sign me up' button to align it with checkbox
- fix vertical whitespace in Sign up form
- fix margin-bottom below tabs in IE

--- a/src/sass/abstract/_variables.sass
+++ b/src/sass/abstract/_variables.sass
@@ -25,6 +25,8 @@ $info-block-gap: 20px
 
 // Buttons
 $buy-tokens-font-size: 20px
+$btn-auth-width: 200px
+$btn-auth-height: 50px
 
 // Header
 $header-height: 170px
