--- a/src/sass/partials/_tabs.sass
+++ b/src/sass/partials/_tabs.sass
@@ -2,7 +2,8 @@
   .tab-content
     @extend %white-block
 
-  ul.nav.nav-tabs
+  .nav-tabs
+    padding-bottom: 0
     border: 0
     background-color: transparent
 
@@ -11,24 +12,27 @@
       border-radius: $wb-border-radius $wb-border-radius 0 0
 
     li
-      margin-bottom: 0
+      margin: 0
+      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active)
+        margin-bottom: -1px
+
 
       a
         margin: 0
         border: 0
-        color: $gray-light !important
+        color: $gray-light
         font-family: $gotham-medium
         font-size: 1.78rem
 
     li:not(.active)
       a
         &:hover
-          background-color: darken($bg-color, 5%) !important
+          background-color: darken($bg-color, 5%)
 
     li.active
       a
         // have to use !important to override !important values set by bootstrap-material-design
-        background-color: $white !important 
+        background-color: $white
         color: $black !important
 
         &:hover,
